--- a/PyaFramework.csproj
+++ b/PyaFramework.csproj
@@ -1,15 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="A_PooyasFramework\**" />
+    <EmbeddedResource Remove="A_PooyasFramework\**" />
+    <None Remove="A_PooyasFramework\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Core\Models\" />
   </ItemGroup>
 
 </Project>
