--- a/PyaFramework.csproj
+++ b/PyaFramework.csproj
@@ -11,11 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <None Remove=".gitignore" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Models\" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
