--- a/Baz/Baz.csproj
+++ b/Baz/Baz.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>bazdasoo</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>pyabzz</Authors>
+    <Company>dasoo</Company>
   </PropertyGroup>
 
   <ItemGroup>
